<resources>
    <string name="app_name">itis-android-tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">log in</string>
    <string name="have_account_question">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign Up!</u></string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="sign_up_btn">sign up</string>
    <string name="book_title">Title</string>
    <string name="description">description</string>
    <string name="the_year_of_publication">the year of publication</string>
    <string name="print">print</string>
    <string name="log_out">log out</string>
    <string name="delete_profile">delete profile</string>
    <string name="your_profile">Your profile</string>
    <string name="title_sample">The Great Gatsby</string>
    <string name="publication_year_sample">1925</string>
    <string name="description_sample">He indeed was great.</string>
    <string name="rating_question">How did you like the book?</string>
    <string name="favorites"><b>Favorites</b></string>
    <string name="all_books"><b>All Books</b></string>
    <string name="rating_sample">4.5</string>
    <string name="email_phone_number_in_use">This phone number or email is already in use. Please, use another one</string>
    <string name="change_password">change password</string>
    <string name="done">done</string>
    <string name="set">set</string>
    <string name="new_phone_number_request">Type in your new phone number</string>
    <string name="phone_number_change_success">Phone number has been successfully updated</string>
    <string name="phone_number_taken">This phone number is already taken. Try another one</string>
    <string name="phone_number_setting_success">Phone number has been successfully set</string>
    <string name="current_password_request">Type in your current password</string>
    <string name="submit">submit</string>
    <string name="wrong_password_message">Wrong password! Try again</string>
    <string name="new_password_request">Type in a new password</string>
    <string name="empty_phone_number_warning">Phone number must not be empty!</string>
    <string name="empty_password_warning">Password must not be empty!</string>
    <string name="duplicate_book_warning">Can\'t print duplicates. Try changing the title or the publication year</string>
    <string name="wrong_password_warning">Wrong password! Try again</string>
    <string name="no_such_user_warning">No such user was found. Consider signing up below</string>
    <string name="delete">delete</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="delete_book">delete book</string>
    <string name="book_option_question">What do you want to do?</string>
    <string name="password_set_success">Password has been successfully set</string>
    <string name="delete_account_question">Are you sure you want to delete your account?</string>
    <string name="delete_btn">delete</string>
    <string name="cancel_btn">cancel</string>
    <string name="delete_account">delete account</string>
    <string name="rate">rate</string>
    <string name="sort_books_by"><b>Sort books by:</b></string>
    <string name="restore">restore</string>
    <string name="delayed_user_deletion">delayed user deletion</string>
    <string name="account_restored_message">Your account has been successfully restored. Welcome back!</string>
    <string name="account_permanently_deleted_message">You\'ve now permanently deleted your account.</string>
    <string name="recently_deleted_account_message">You\'ve recently deleted your account. You can now either permanently delete or restore it.</string>
</resources>
