<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.fragments.BookInfoFragment">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/book_title"
        android:textAllCaps="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:text="@string/title_sample"
        android:layout_marginHorizontal="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_year_of_publication"
        android:textSize="28sp"
        android:textAllCaps="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/publication_year_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:text="@string/publication_year_sample"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="28sp"
        android:textAllCaps="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"/>


    <TextView
        android:id="@+id/description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:text="@string/description_sample"
        android:layout_marginHorizontal="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/rating_question"
        android:layout_marginTop="120dp"/>

    <RatingBar
        android:id="@+id/book_rating_rb"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:textAllCaps="true"
        android:layout_marginTop="5dp"
        />




</androidx.appcompat.widget.LinearLayoutCompat>
