<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AuthorizationFragment">

    <TextView
        android:id="@+id/enter_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_email_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:id="@+id/enter_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_password"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_password_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        android:layout_margin="40dp"
        android:text="@string/log_in"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/have_account_question_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:text="@string/have_account_question"
        />

    <TextView
        android:id="@+id/signup_lnk"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/have_account_question_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up"
        android:textColor="@color/blue"/>






</androidx.constraintlayout.widget.ConstraintLayout>
