<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:id="@+id/user_info_setting_dialog"
    android:layout_marginHorizontal="10dp">
    <TextView
        android:id="@+id/header_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_option_question"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/first_option_btn"
            android:layout_width="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            android:layout_height="40dp"
            android:text="@string/delete_book"
            android:textAllCaps="true"
            android:textSize="12sp"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/second_option_btn"
            android:layout_gravity="bottom|start"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/second_option_btn"
            app:layout_constraintHorizontal_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/add_to_favorites"
            android:textAllCaps="true"
            android:textSize="12sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/first_option_btn"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
