<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.MainFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/to_profile_btn"
        android:layout_width="52dp"
        android:layout_height="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_circle"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        />


    <TextView
        android:id="@+id/favorites_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="36sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorites_rv"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/favorites_tv"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:id="@+id/all_books_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_books"
        app:layout_constraintTop_toBottomOf="@id/favorites_rv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="36sp"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/to_book_adding_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add"
        app:maxImageSize="50dp"
        android:tint="#ffffff" />

    <TextView
        android:id="@+id/sort_by_tv"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_books_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_books_tv"
        android:layout_marginStart="20dp"
        />

    <Spinner
        android:layout_marginTop="8dp"
        android:id="@+id/book_sort_spinner"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_books_tv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_books_rv"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:maxHeight="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_sort_spinner" />


</androidx.constraintlayout.widget.ConstraintLayout>
